<resources>
    <string name="app_name">expense-application</string>
    <string name="password">Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="register_button_text">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="add_button_text">Add</string>
    <string name="expense_type">Select expense type\n</string>
    <string name="currency_type">Currency Type</string>
    <string name="add_expense_text">Add Your Expenses</string>
    <string name="save_button_text">Save</string>
    <string name="add_new_expense_text">Add New Expense</string>
    <string-array name="expense_types">
        <item>Gas</item>
        <item>Taxi</item>
        <item>Food</item>
        <item>Accommodation</item>
        <item>Other</item>
    </string-array>
    <string-array name="currency_types">
        <item>TL</item>
        <item>EUR</item>
        <item>USD</item>
        <item>PKR</item>
        <item>INR</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="waiting_expenses_text">Waiting Approval Expenses</string>
    <string name="approve_text">Approve</string>
    <string name="reject_text">Reject</string>
    <string name="reject_reason_text">Change request description</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_history">History</string>
    <string name="title_reports">Reports</string>
    <string name="pay_text">Pay</string>
    <string name="expense_type_taxi">Taxi</string>
    <string name="expense_type_food">Food</string>
    <string name="expense_type_accommodation">Accommodation</string>
    <string name="expense_type_gas">Gas</string>
    <string name="expense_type_other">Other</string>
    <string name="filtering_options">Filtering Options</string>
    <string name="paid">Paid</string>
    <string name="approved">Approved</string>
    <string name="waiting">Waiting</string>
    <string name="rejected">Rejected</string>
    <string name="change_status">Change Status</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="total">Total</string>
    <string name="description_validation">Description cannot be empty</string>
    <string name="amount_price_validation">Amount must be less than 5000</string>
    <string name="amount_validation">Amount cannot be empty</string>
    <string name="currency_type_validation">Currency type cannot be empty</string>
    <string name="expense_type_validation">Expense type cannot be empty</string>
    <string name="expense_type_added_successfully">Expense type added successfully</string>
    <string name="userExpenses">User Expenses</string>
    <string name="daily_expenses">Daily Expenses</string>
    <string name="ok">OK</string>
    <string name="change_request">Change Request</string>
    <string name="email_validation">Email cannot be empty</string>
    <string name="email_validation_error">Please enter a valid email</string>
    <string name="password_validation">Password cannot be empty</string>
    <string name="register_successfully">Register operation successfully</string>
    <string name="password_match_validation">Passwords do not match</string>
    <string name="username_validation">Username cannot be empty</string>
    <string name="email_or_username_validation">Email or username cannot be empty</string>
    <string name="transaction_successfully">Your transaction has been completed successfully</string>
    <string name="email_or_username">Email or username</string>
    <string name="update_expense">Update expense</string>
    <string name="expense_type_chart">Percentage Expense Type Chart</string>
    <string name="user_expense_total_chart">User Expense Total Chart</string>
    <string name="daily_expenses_chart">Daily Expenses Chart</string>
    <string name="all">All</string>
    <string name="register">Don\'t you have an account?</string>
    <string name="date_validation">Date cannot be empty</string>
    <string name="date">Tarih</string>
    <string name="expense_added_successfully">Expense added successfully</string>
    <string name="date_format_validation">Invalid date</string>
    <string name="payment_complated">Payment complated</string>
    <string name="expense_updated_successfully">Expense updated successfully</string>
    <string name="user_monthly_expenses">User Monthly Expenses</string>
    <string name="monthly_expenses_chart">Monthly Expenses Chart</string>
</resources>