<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkBoxTaxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_type_taxi" />

    <CheckBox
        android:id="@+id/checkBoxFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_type_food" />

    <CheckBox
        android:id="@+id/checkBoxAccommodation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_type_accommodation" />

    <CheckBox
        android:id="@+id/checkBoxGas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_type_gas" />

    <CheckBox
        android:id="@+id/checkBoxOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_type_other" />
</LinearLayout>